crates/ir/tests/snapshots/lower_test__actors__actor_counter.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module actors__actor_counter

type CounterMsg = Inc#0 | Dec#1 | Get#2(Ref[Int])
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/actor/spawn as spawn((Mailbox[o11]) -> Unit): Ref[o11]
import core/actor/send as send(Ref[r11], r11): Unit
import core/actor/receive as receive(Mailbox[a12]): a12
declare receive: (Mailbox[a12]) -> a12
declare send: (Ref[r11], r11) -> Unit

fn counter(v0: Mailbox[CounterMsg], v1: Int) -> v12 =
  let_join [recur] v2(v3: Mailbox[CounterMsg], v4: Int) =
    let v5: CounterMsg = call receive(v3)
    switch v5 {
      0 ->
        let v6: Int = add_int(v4, 1)
        jump v2(v3, v6)
      1 ->
        let v7: Int = sub_int(v4, 1)
        jump v2(v3, v7)
      2 (v8: Ref[Int]) ->
        let v9: Unit = call send(v8, v4)
        jump v2(v3, v4)
    }
  in
  jump v2(v0, v1)

fn main() -> (Mailbox[CounterMsg], Int) -> y12 =
  let v10: (Mailbox[CounterMsg], Int) -> y12 = make_closure(counter, [])
  v10
