crates/ir/tests/snapshots/lower_test__actors__actor_receive_timeout.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module actors__actor_receive_timeout

type Msg = Ping#0 | Pong#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/actor/receive_timeout as receive_timeout(Mailbox[c10], Int): Option[c10]
declare receive_timeout: (Mailbox[c10], Int) -> Option[c10]

fn actor(v0: Mailbox[Msg]) -> Unit =
  let_join [recur] v1(v2: Mailbox[Msg]) =
    let v3: Option[Msg] = call receive_timeout(v2, 5000)
    switch v3 {
      0 (v4: g) ->
        switch v4 {
          0 ->
            jump v1(v2)
          1 ->
            jump v1(v2)
        }
      1 ->
        ()
    }
  in
  jump v1(v0)
