crates/ir/tests/snapshots/lower_test__actors__async_receive.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module actors__async_receive

type Msg = Ping#0(Int, Ref[Int])
extern java "krypton.runtime.KryptonIO" println(u10): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/actor/spawn as spawn((Mailbox[o9]) -> Unit): Ref[o9]
import core/actor/send as send(Ref[r9], r9): Unit
import core/actor/receive as receive(Mailbox[a10]): a10
import core/actor/actor_ref as actor_ref(Mailbox[i10]): Ref[i10]
import core/actor/mailbox as mailbox(): Mailbox[t10]
declare actor_ref: (Mailbox[i10]) -> Ref[i10]
declare mailbox: () -> Mailbox[t10]
declare println: (u10) -> Unit
declare receive: (Mailbox[a10]) -> a10
declare send: (Ref[r9], r9) -> Unit
declare spawn: ((Mailbox[o9]) -> Unit) -> Ref[o9]

fn echo(v0: Mailbox[Msg]) -> Unit =
  let v1: Msg = call receive(v0)
  switch v1 {
    0 (v2: Int, v3: Ref[Int]) ->
      let v4: Unit = call send(v3, v2)
      v4
  }

fn main() -> Unit =
  let v6: (Mailbox[Msg]) -> Unit = make_closure(echo, [])
  let v5: Ref[Msg] = call spawn(v6)
  let v7: Mailbox[Int] = call mailbox()
  let v8: Ref[Int] = call actor_ref(v7)
  let v9: ~Msg = construct Msg::Ping#0(42, v8)
  let v10: Unit = call send(v5, v9)
  let v11: Int = call receive(v7)
  let v12: Unit = call println(v11)
  v12
